--- a/src/index.html
+++ b/src/index.html
@@ -92,9 +92,27 @@
       <section class="jewelry_block">
         <img class="jewelry_photo" src="images/bracelet.jpg" alt="">
         <div class="jewelry_obj">
-          <div class="jewelry"><img src="images/jewelry1.jpg" alt=""></div>
-          <div class="jewelry"><img src="images/jewelry2.jpg" alt=""></div>
-          <div class="jewelry"><img src="images/jewelry3.jpg" alt=""></div>
+          <a class="jewelry">
+            <img src="images/jewelry1.jpg" alt="">
+            <p>кольцо coco crush</p>
+            <p>Белое золото 18 карат, бриллианты</p>
+            <p>98 300 rub*</v>
+            <p>Посмотреть детали</p>
+          </a>
+          <a class="jewelry">
+            <img src="images/jewelry2.jpg" alt="">
+            <p>кольцо coco crush</p>
+            <p>Белое золото 18 карат, бриллианты</p>
+            <p>98 300 rub*</p>
+            <p>Посмотреть детали</p>
+          </a>
+          <a class="jewelry">
+            <img src="images/jewelry3.jpg" alt="">
+            <p>кольцо coco crush</p>
+            <p>Белое золото 18 карат, бриллианты</p>
+            <p>98 300 rub*</p>
+            <p>Посмотреть детали</p>
+          </a>
         </div>
       </section>
 
